tests/unit/language/errors/handle_no_sys_error.arche
// RUN: %arche build -o %t %s > %t.out 2>&1 ; grep -q "cannot be sys parameter" %t.out
Entity :: arche { next :: handle<Entity> }

[10] Entity;

process :: sys (next) {
}

@allow_pure_proc
main :: proc() {
}
